--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@ title: Home
   </div>
   {% endfor %}
 </div>
-
+{% posts_size = paginator.posts | size  %}
+{% if posts_size !=0 %}
 <div class="pagination">
   {% if paginator.next_page %}
     <a class="pagination-item older" href="{{ site.baseurl }}page{{paginator.next_page}}">Older</a>
@@ -35,3 +36,4 @@ title: Home
     <span class="pagination-item newer">Newer</span>
   {% endif %}
 </div>
+{% endif %}
