--- a/index.html
+++ b/index.html
@@ -1,15 +1,65 @@
-
-<html> 
-  <head> 
-    <title>Mahdiyar Zerehpoush</title> 
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Seyyed Mahdiyar Zerehpoush. Software Engineer." />
+    <title>Mahdiyar Zerehpoush</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/@exampledev/new.css@1.1.2/new.min.css"
+    />
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script> 
     <link rel="stylesheet" type="text/css" href="index.css">
-  </head> 
-  <body> 
-    <script type="text/javascript" src="index.js"> 
+
+    <style>
+      @font-face {
+        font-family: 'vcr_osd_monoregular';
+        src: url('assets/vcr_osd_mono_1.001-webfont.woff2') format('woff2'),
+            url('assets/vcr_osd_mono_1.001-webfont.woff') format('woff');
+        font-weight: normal;
+        font-style: normal;
+        font-display: swap;
+      }
+
+      :root {
+        --nc-font-sans: "vcr_osd_monoregular", monospace;
+        --nc-font-mono: "vcr_osd_monoregular", monospace;
+        --nc-tx-1: #ffffff;
+        --nc-tx-2: #eeeeee;
+        --nc-bg-1: #000000;
+        --nc-bg-2: #002700;
+        --nc-bg-3: #005800;
+        --nc-lk-1: #00ff00;
+        --nc-lk-2: #00c200;
+        --nc-lk-tx: #000000;
+        --nc-ac-1: #00ff00;
+        --nc-ac-tx: #000000;
+      }
+
+      * {
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale;
+      }
+
+      body {
+        text-transform: uppercase;
+      }
+
+      h1 {
+        font-size: 1em;
+        font-weight: normal;
+        border: none;
+        margin: 0;
+      }
+    </style>
+  </head>
+  <body>
+        <script type="text/javascript" src="index.js"> 
     </script> 
     <div id="console"></div> 
     
     </script>
-  </body> 
-</html> 
+
+  </body>
+</html>
