--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
     <div id="console"></div> 
     
     </script>
+    <nav>
+      <a href="mailto:mahdiyar.zerehpoush@gmail.com">EMAIL</a>  |  <a href="https://github.com/smzerehpoush">GITHUB</a>  |  <a href="https://twitter.com/SeyyedMahdiyar">TWITTER</a>  |  <a href="https://linkedin.com/in/mahdiyar-zerehpoush">LINKEDIN</a>
+    </nav>
 
   </body>
 </html>
