--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
     <style>
       @font-face {
         font-family: 'vcr_osd_monoregular';
-        src: url('assets/vcr_osd_mono_1.001-webfont.woff2') format('woff2'),
-            url('assets/vcr_osd_mono_1.001-webfont.woff') format('woff');
+        src: url('assets/vcr_osd_mono_1.001-webfont.woff') format('woff');
         font-weight: normal;
         font-style: normal;
         font-display: swap;
