--- a/index.html
+++ b/index.html
@@ -44,10 +44,21 @@
       }
 
       h1 {
-        font-size: 1em;
-        font-weight: normal;
+        font-size: 4em;
+        font-weight: bold;
         border: none;
         margin: 0;
+      }
+
+      h2 {
+        font-size: 3em;
+        font-weight: bold;
+        border: none;
+        margin: 0;
+      }
+
+      nav {
+        font-size: 2em;
       }
     </style>
   </head>
